openeyes-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openeyes
  labels:
    app: openeyes
    group: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openeyes
  template:
    metadata:
      labels:
        app: openeyes
        group: frontend
    spec:
      containers:
        - name: openeyes
          image: appertaopeneyes/web:php7.4
          ports:
            - containerPort: 80
