openeyes-db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: openeyes-db
  labels:
    group: backend
spec:
  type: ClusterIP
  selector:
    app: openeyes-db
  ports:
    - port: 3306
      targetPort: 3306
