openeyes-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: openeyes
  labels:
    group: frontend
spec:
  type: ClusterIP
  selector:
    app: openeyes
  ports:
    - port: 80
